<resources>
    <string name="app_name">My Firt Application</string>
    <string name="txt_play">Play</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_confing">Confing</string>
    <string name="txt_about">About</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_acount">Acount</string>
    <string name="txt_email">Email</string>
    <string name="txt_user">User</string>
    <string name="txt_password">Password</string>
    <string name="txt_Sing_In">Sing In</string>
</resources>