<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="15dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/misiontic_2022"
            android:layout_marginVertical="30dp">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_play"
            android:layout_weight="20">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_profile"
            android:layout_weight="20">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_confing"
            android:layout_weight="20">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_about"
            android:layout_weight="20">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_exit"
            android:layout_weight="20">
        </Button>
    </LinearLayout>







</LinearLayout>